# PageTextAnalyzer

./: .replit  app.py  non_polish_text_results.html  pyproject.toml  replit.md  web_scraper.py
attached_assets/: non_polish_text_results-2_1753824094715.html  non_polish_text_results-3_1753824471652.html
templates/: index.html
