[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "langdetect>=1.0.9",
    "openai>=1.97.1",
    "polyglot>=16.7.4",
    "requests>=2.32.4",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
]
